# a2-4300-cpp

./: CMakeLists.txt  README.md
assets/: config.txt
dependencies/sfml/: CMakeLists.txt
include/: Components.h  Entity.h  EntityManager.h  Game.h
src/: Entity.cpp  EntityManager.cpp  Game.cpp  Vec2.cpp  main.cpp
